feat: drop TimeRangePicker
Breaking: Stopped supporting TimeRangePicker

--- a/i18n/core.json
+++ b/i18n/core.json
@@ -26,7 +26,5 @@
   "UIKit.MultilineTextInput.expand": "Expand",
   "UIKit.SelectInput.noOptionsMessageWithInputValue": "No options",
   "UIKit.SelectInput.noOptionsMessageWithoutInputValue": "No options",
-  "UIKit.TimeInput.labelRange": "to",
-  "UIKit.TimeRangePicker.from": "From",
-  "UIKit.TimeRangePicker.to": "To"
+  "UIKit.TimeInput.labelRange": "to"
 }
