--- a/i18n/en.json
+++ b/i18n/en.json
@@ -26,7 +26,5 @@
   "UIKit.MultilineTextInput.expand": "Expand",
   "UIKit.SelectInput.noOptionsMessageWithInputValue": "No options",
   "UIKit.SelectInput.noOptionsMessageWithoutInputValue": "No options",
-  "UIKit.TimeInput.labelRange": "to",
-  "UIKit.TimeRangePicker.from": "From",
-  "UIKit.TimeRangePicker.to": "To"
+  "UIKit.TimeInput.labelRange": "to"
 }
