feat(localized-money-input): add translations

--- a/i18n/core.json
+++ b/i18n/core.json
@@ -14,6 +14,9 @@
   "UIKit.FieldErrors.invalidFractionalNumber": "A whole number is required.",
   "UIKit.FieldErrors.invalidNegativeNumber": "Negative number is not supported.",
   "UIKit.FieldErrors.missingRequiredField": "This field is required. Provide a value.",
+  "UIKit.LocalizedMoneyInput.hide": "Hide currencies ({remainingCurrencies})",
+  "UIKit.LocalizedMoneyInput.missingRequiredField": "This field is required. Provide at least one value.",
+  "UIKit.LocalizedMoneyInput.show": "Show all currencies ({remainingCurrencies})",
   "UIKit.LocalizedMultilineTextInput.collapse": "Collapse",
   "UIKit.LocalizedMultilineTextInput.expand": "Expand",
   "UIKit.LocalizedMultilineTextInput.hide": "Hide languages ({remainingLanguages})",
