--- a/i18n/es.json
+++ b/i18n/es.json
@@ -14,6 +14,9 @@
   "UIKit.FieldErrors.invalidFractionalNumber": "Sólo números enteros soportados",
   "UIKit.FieldErrors.invalidNegativeNumber": "Sólo números positivos soportados",
   "UIKit.FieldErrors.missingRequiredField": "Este campo es obligatorio. Proporcione un valor al menos.",
+  "UIKit.LocalizedMoneyInput.hide": "",
+  "UIKit.LocalizedMoneyInput.missingRequiredField": "",
+  "UIKit.LocalizedMoneyInput.show": "",
   "UIKit.LocalizedMultilineTextInput.collapse": "Contraer",
   "UIKit.LocalizedMultilineTextInput.expand": "Expandir",
   "UIKit.LocalizedMultilineTextInput.hide": "Ocultar lenguajes ({remainingLanguages})",
