--- a/i18n/de.json
+++ b/i18n/de.json
@@ -14,6 +14,9 @@
   "UIKit.FieldErrors.invalidFractionalNumber": "",
   "UIKit.FieldErrors.invalidNegativeNumber": "",
   "UIKit.FieldErrors.missingRequiredField": "",
+  "UIKit.LocalizedMoneyInput.hide": "",
+  "UIKit.LocalizedMoneyInput.missingRequiredField": "",
+  "UIKit.LocalizedMoneyInput.show": "",
   "UIKit.LocalizedMultilineTextInput.collapse": "Verbergen",
   "UIKit.LocalizedMultilineTextInput.expand": "Anzeigen",
   "UIKit.LocalizedMultilineTextInput.hide": "Sprachen verbergen",
