feat(localized-text-input): add de and es messages

--- a/i18n/de.json
+++ b/i18n/de.json
@@ -14,9 +14,9 @@
   "UIKit.FieldErrors.invalidFractionalNumber": "",
   "UIKit.FieldErrors.invalidNegativeNumber": "",
   "UIKit.FieldErrors.missingRequiredField": "",
-  "UIKit.LocalizedMoneyInput.hide": "",
-  "UIKit.LocalizedMoneyInput.missingRequiredField": "",
-  "UIKit.LocalizedMoneyInput.show": "",
+  "UIKit.LocalizedMoneyInput.hide": "Währungen verbergen ({remainingCurrencies})",
+  "UIKit.LocalizedMoneyInput.missingRequiredField": "Pflichtfeld*, Geben Sie mindestens einen Wert an",
+  "UIKit.LocalizedMoneyInput.show": "Alle Währungen anzeigen ({remainingCurrencies})",
   "UIKit.LocalizedMultilineTextInput.collapse": "Verbergen",
   "UIKit.LocalizedMultilineTextInput.expand": "Anzeigen",
   "UIKit.LocalizedMultilineTextInput.hide": "Sprachen verbergen",
