feat(website): use react-live editor

--- a/src/components/typography/text/text.mdx
+++ b/src/components/typography/text/text.mdx
@@ -18,30 +18,22 @@ import { Text } from '@commercetools-frontend/ui-kit'
 
 ## Headline
 
-<div style={{ border: '1px solid magenta', padding: 16 }}>
+```.jsx
+<Spacings.Stack scale="m">
+  <Text.Headline elementType="h1">This is a H1</Text.Headline>
 
-<Text.Headline elementType="h1">This is a H1</Text.Headline>
+  <Text.Headline elementType="h2">This is a H2</Text.Headline>
 
-<Text.Headline elementType="h2">This is a H2</Text.Headline>
-
-<Text.Headline elementType="h3">This is a H3</Text.Headline>
-
-</div>
-
-```jsx
-<Text.Headline elementType="h1">This is a H1</Text.Headline>
+  <Text.Headline elementType="h3">This is a H3</Text.Headline>
+</Spacings.Stack>
 ```
 
 ## Subheadline
 
-<div style={{ border: '1px solid magenta', padding: 16 }}>
+```.jsx
+<Spacings.Stack scale="m">
+  <Text.Subheadline elementType="h4">This is a H4</Text.Subheadline>
 
-<Text.Subheadline elementType="h4">This is a H4</Text.Subheadline>
-
-<Text.Subheadline elementType="h5">This is a H5</Text.Subheadline>
-
-</div>
-
-```jsx
-<Text.Subheadline elementType="h1">This is a H1</Text.Subheadline>
+  <Text.Subheadline elementType="h5">This is a H5</Text.Subheadline>
+</Spacings.Stack>
 ```
