chore(website): add date-time-field page, improve layout structures

--- a/src/components/typography/text/text.mdx
+++ b/src/components/typography/text/text.mdx
@@ -13,7 +13,7 @@ Our typography components should be used when rendering any kind of text. We div
 ## Usage
 
 ```jsx
-import { Text } from '@commercetools-frontend/ui-kit'
+import { Text } from '@commercetools-frontend/ui-kit';
 ```
 
 ## Headline
