feat(website): add basic navbar links

--- a/src/components/typography/text/text.mdx
+++ b/src/components/typography/text/text.mdx
@@ -1,7 +1,7 @@
 ---
 id: text
 title: Text component
-permalink: /components/typography/text
+permalink: /components/typography
 ---
 
 import { Text } from 'ui-kit'
