feat: add simplified chinese

--- a/i18n/data/zh-CN.json
+++ b/i18n/data/zh-CN.json
@@ -1,1 +1,36 @@
-{}
+{
+  "UIKit.AsyncCreatableSelectInput.createLabel": "创建 \"{inputValue}\"",
+  "UIKit.AsyncCreatableSelectInput.noOptionsMessageWithInputValue": "无选项",
+  "UIKit.AsyncCreatableSelectInput.noOptionsMessageWithoutInputValue": "无选项",
+  "UIKit.AsyncSelectInput.noOptionsMessageWithInputValue": "无选项",
+  "UIKit.AsyncSelectInput.noOptionsMessageWithoutInputValue": "无选项",
+  "UIKit.CreatableSelectInput.createLabel": "创建 \"{inputValue}\"",
+  "UIKit.CreatableSelectInput.noOptionsMessageWithInputValue": "无选项",
+  "UIKit.CreatableSelectInput.noOptionsMessageWithoutInputValue": "无选项",
+  "UIKit.DateInput.placeholder": "月/日/年",
+  "UIKit.DateRangeInput.placeholder": "月/日/年 - 月/日/年",
+  "UIKit.DateTimeInput.placeholder": "月/日/年 - 小时：分钟 上午/下午",
+  "UIKit.DateTimeInput.timePlaceholder": "小时：分钟 上午/下午",
+  "UIKit.FieldErrors.invalidFractionalNumber": "需要完整数字。",
+  "UIKit.FieldErrors.invalidNegativeNumber": "不支持负数。",
+  "UIKit.FieldErrors.missingRequiredField": "此字段为必填项。请提供一个值。",
+  "UIKit.LocalizedMoneyInput.hide": "隐藏货币 ({remainingCurrencies})",
+  "UIKit.LocalizedMoneyInput.missingRequiredField": "此字段为必填项。请提供至少一个值。",
+  "UIKit.LocalizedMoneyInput.show": "显示所有货币 ({remainingCurrencies})",
+  "UIKit.LocalizedMultilineTextInput.collapse": "崩溃",
+  "UIKit.LocalizedMultilineTextInput.expand": "扩展",
+  "UIKit.LocalizedMultilineTextInput.hide": "隐藏所有语言 ({remainingLanguages})",
+  "UIKit.LocalizedMultilineTextInput.missingRequiredField": "此字段为必填项。请提供至少一个值。",
+  "UIKit.LocalizedMultilineTextInput.show": "显示所有语言 ({remainingLanguages})",
+  "UIKit.LocalizedTextInput.collapse": "隐藏所有语言 ({remainingLanguages})",
+  "UIKit.LocalizedTextInput.expand": "显示所有语言 ({remainingLanguages})",
+  "UIKit.LocalizedTextInput.missingRequiredField": "此字段为必填项。请提供至少一个值。",
+  "UIKit.MoneyField.highPrecision": "价格精确度高",
+  "UIKit.MultilineTextInput.collapse": "崩溃",
+  "UIKit.MultilineTextInput.expand": "扩展",
+  "UIKit.PasswordField.hide": "隐藏",
+  "UIKit.PasswordField.show": "显示",
+  "UIKit.SelectInput.noOptionsMessageWithInputValue": "无选项",
+  "UIKit.SelectInput.noOptionsMessageWithoutInputValue": "无选项",
+  "UIKit.TimeInput.placeholder": "小时：分钟 上午/下午"
+}
