--- a/i18n/data/fr-FR.json
+++ b/i18n/data/fr-FR.json
@@ -1,1 +1,36 @@
-{}
+{
+  "UIKit.AsyncCreatableSelectInput.createLabel": "Créer \"{inputValue}\"",
+  "UIKit.AsyncCreatableSelectInput.noOptionsMessageWithInputValue": "Aucune option",
+  "UIKit.AsyncCreatableSelectInput.noOptionsMessageWithoutInputValue": "Aucune option",
+  "UIKit.AsyncSelectInput.noOptionsMessageWithInputValue": "Aucune option",
+  "UIKit.AsyncSelectInput.noOptionsMessageWithoutInputValue": "Aucune option",
+  "UIKit.CreatableSelectInput.createLabel": "Créer \"{inputValue}\"",
+  "UIKit.CreatableSelectInput.noOptionsMessageWithInputValue": "Aucune option",
+  "UIKit.CreatableSelectInput.noOptionsMessageWithoutInputValue": "Aucune option",
+  "UIKit.DateInput.placeholder": "MM/JJ/AAAA",
+  "UIKit.DateRangeInput.placeholder": "MM/JJ/AAAA - MM/JJ/AAAA",
+  "UIKit.DateTimeInput.placeholder": "MM/JJ/AAAA - HH:mm AM/PM",
+  "UIKit.DateTimeInput.timePlaceholder": "HH:mm AM/PM",
+  "UIKit.FieldErrors.invalidFractionalNumber": "Un nombre entier est requis.",
+  "UIKit.FieldErrors.invalidNegativeNumber": "Nombre négatif non pris en charge.",
+  "UIKit.FieldErrors.missingRequiredField": "Veuillez indiquer au moins une valeur.",
+  "UIKit.LocalizedMoneyInput.hide": "Masquer les devices ({remainingCurrencies})",
+  "UIKit.LocalizedMoneyInput.missingRequiredField": "Ce champ est requis. Veuillez indiquer au moins une valeur.",
+  "UIKit.LocalizedMoneyInput.show": "Afficher toutes les devises  ({remainingCurrencies})",
+  "UIKit.LocalizedMultilineTextInput.collapse": "Réduire",
+  "UIKit.LocalizedMultilineTextInput.expand": "Développer",
+  "UIKit.LocalizedMultilineTextInput.hide": "Masquer les langues  ({remainingLanguages})",
+  "UIKit.LocalizedMultilineTextInput.missingRequiredField": "Ce champ est requis. Veuillez indiquer au moins une valeur.",
+  "UIKit.LocalizedMultilineTextInput.show": "Afficher toutes les langues ({remainingLanguages})",
+  "UIKit.LocalizedTextInput.collapse": "Masquer les langues  ({remainingLanguages})",
+  "UIKit.LocalizedTextInput.expand": "Afficher toutes les langues ({remainingLanguages})",
+  "UIKit.LocalizedTextInput.missingRequiredField": "Ce champ est requis. Veuillez indiquer au moins une valeur.",
+  "UIKit.MoneyField.highPrecision": "Prix haute précision",
+  "UIKit.MultilineTextInput.collapse": "Réduire",
+  "UIKit.MultilineTextInput.expand": "Développer",
+  "UIKit.PasswordField.hide": "masquer",
+  "UIKit.PasswordField.show": "afficher",
+  "UIKit.SelectInput.noOptionsMessageWithInputValue": "Aucune option",
+  "UIKit.SelectInput.noOptionsMessageWithoutInputValue": "Aucune option",
+  "UIKit.TimeInput.placeholder": "HH:mm AM/PM"
+}
