--- a/i18n/data/zh-CN.json
+++ b/i18n/data/zh-CN.json
@@ -19,7 +19,7 @@
   "UIKit.LocalizedMoneyInput.show": "显示所有货币 ({remainingCurrencies})",
   "UIKit.LocalizedMultilineTextInput.collapse": "崩溃",
   "UIKit.LocalizedMultilineTextInput.expand": "扩展",
-  "UIKit.LocalizedMultilineTextInput.hide": "隐藏所有语言 ({remainingLanguages})",
+  "UIKit.LocalizedMultilineTextInput.hide": "隐藏语言 ({remainingLanguages})",
   "UIKit.LocalizedMultilineTextInput.missingRequiredField": "此字段为必填项。请提供至少一个值。",
   "UIKit.LocalizedMultilineTextInput.show": "显示所有语言 ({remainingLanguages})",
   "UIKit.LocalizedTextInput.collapse": "隐藏所有语言 ({remainingLanguages})",
