fix(i18n): use all locales

--- a/i18n/data/core.json
+++ b/i18n/data/core.json
@@ -26,6 +26,7 @@
   "UIKit.LocalizedTextInput.expand": "Show all languages ({remainingLanguages})",
   "UIKit.LocalizedTextInput.missingRequiredField": "This field is required. Provide at least one value.",
   "UIKit.MoneyField.highPrecision": "High Precision Price",
+  "UIKit.MoneyInput.highPrecision": "High Precision Price",
   "UIKit.MultilineTextInput.collapse": "Collapse",
   "UIKit.MultilineTextInput.expand": "Expand",
   "UIKit.PasswordField.hide": "hide",
