--- a/i18n/data/es.json
+++ b/i18n/data/es.json
@@ -26,6 +26,7 @@
   "UIKit.LocalizedTextInput.expand": "Mostrar todos los lenguajes ({remainingLanguages})",
   "UIKit.LocalizedTextInput.missingRequiredField": "Este campo es obligatorio. Proporcione un valor al menos.",
   "UIKit.MoneyField.highPrecision": "",
+  "UIKit.MoneyInput.highPrecision": "",
   "UIKit.MultilineTextInput.collapse": "Contraer",
   "UIKit.MultilineTextInput.expand": "Expandir",
   "UIKit.PasswordField.hide": "ocultar",
