--- a/i18n/data/de.json
+++ b/i18n/data/de.json
@@ -26,6 +26,7 @@
   "UIKit.LocalizedTextInput.expand": "Alle Sprachen anzeigen",
   "UIKit.LocalizedTextInput.missingRequiredField": "Pflichtfeld*, Geben Sie mindestens einen Wert an",
   "UIKit.MoneyField.highPrecision": "",
+  "UIKit.MoneyInput.highPrecision": "",
   "UIKit.MultilineTextInput.collapse": "Ausblenden",
   "UIKit.MultilineTextInput.expand": "Erweitern",
   "UIKit.PasswordField.hide": "verbergen",
