--- a/i18n/data/zh-CN.json
+++ b/i18n/data/zh-CN.json
@@ -26,6 +26,7 @@
   "UIKit.LocalizedTextInput.expand": "显示所有语言 ({remainingLanguages})",
   "UIKit.LocalizedTextInput.missingRequiredField": "此字段为必填项。请提供至少一个值。",
   "UIKit.MoneyField.highPrecision": "价格精确度高",
+  "UIKit.MoneyInput.highPrecision": "",
   "UIKit.MultilineTextInput.collapse": "崩溃",
   "UIKit.MultilineTextInput.expand": "扩展",
   "UIKit.PasswordField.hide": "隐藏",
