--- a/i18n/data/de.json
+++ b/i18n/data/de.json
@@ -2,11 +2,14 @@
   "UIKit.AsyncCreatableSelectInput.createLabel": "",
   "UIKit.AsyncCreatableSelectInput.noOptionsMessageWithInputValue": "",
   "UIKit.AsyncCreatableSelectInput.noOptionsMessageWithoutInputValue": "",
+  "UIKit.AsyncCreatableSelectInput.placeholder": "Auswählen...",
   "UIKit.AsyncSelectInput.noOptionsMessageWithInputValue": "",
   "UIKit.AsyncSelectInput.noOptionsMessageWithoutInputValue": "",
+  "UIKit.AsyncSelectInput.placeholder": "Auswählen...",
   "UIKit.CreatableSelectInput.createLabel": "",
   "UIKit.CreatableSelectInput.noOptionsMessageWithInputValue": "",
   "UIKit.CreatableSelectInput.noOptionsMessageWithoutInputValue": "",
+  "UIKit.CreatableSelectInput.placeholder": "Auswählen...",
   "UIKit.DateInput.placeholder": "DD.MM.YYYY",
   "UIKit.DateRangeInput.placeholder": "DD.MM.YYYY - DD.MM.YYYY",
   "UIKit.DateTimeInput.placeholder": "DD.MM.YYYY - HH:mm",
@@ -26,11 +29,13 @@
   "UIKit.LocalizedTextInput.expand": "Alle Sprachen anzeigen",
   "UIKit.LocalizedTextInput.missingRequiredField": "Pflichtfeld*, Geben Sie mindestens einen Wert an",
   "UIKit.MoneyField.highPrecision": "",
+  "UIKit.MoneyInput.highPrecision": "",
   "UIKit.MultilineTextInput.collapse": "Ausblenden",
   "UIKit.MultilineTextInput.expand": "Erweitern",
   "UIKit.PasswordField.hide": "verbergen",
   "UIKit.PasswordField.show": "anzeigen",
   "UIKit.SelectInput.noOptionsMessageWithInputValue": "",
   "UIKit.SelectInput.noOptionsMessageWithoutInputValue": "",
+  "UIKit.SelectInput.placeholder": "Auswählen...",
   "UIKit.TimeInput.placeholder": "HH:mm"
 }
