--- a/i18n/data/en.json
+++ b/i18n/data/en.json
@@ -2,11 +2,14 @@
   "UIKit.AsyncCreatableSelectInput.createLabel": "Create \"{inputValue}\"",
   "UIKit.AsyncCreatableSelectInput.noOptionsMessageWithInputValue": "No options",
   "UIKit.AsyncCreatableSelectInput.noOptionsMessageWithoutInputValue": "No options",
+  "UIKit.AsyncCreatableSelectInput.placeholder": "Select...",
   "UIKit.AsyncSelectInput.noOptionsMessageWithInputValue": "No options",
   "UIKit.AsyncSelectInput.noOptionsMessageWithoutInputValue": "No options",
+  "UIKit.AsyncSelectInput.placeholder": "Select...",
   "UIKit.CreatableSelectInput.createLabel": "Create \"{inputValue}\"",
   "UIKit.CreatableSelectInput.noOptionsMessageWithInputValue": "No options",
   "UIKit.CreatableSelectInput.noOptionsMessageWithoutInputValue": "No options",
+  "UIKit.CreatableSelectInput.placeholder": "Select...",
   "UIKit.DateInput.placeholder": "MM/DD/YYYY",
   "UIKit.DateRangeInput.placeholder": "MM/DD/YYYY - MM/DD/YYYY",
   "UIKit.DateTimeInput.placeholder": "MM/DD/YYYY - HH:mm AM/PM",
@@ -26,11 +29,13 @@
   "UIKit.LocalizedTextInput.expand": "Show all languages ({remainingLanguages})",
   "UIKit.LocalizedTextInput.missingRequiredField": "This field is required. Provide at least one value.",
   "UIKit.MoneyField.highPrecision": "High Precision Price",
+  "UIKit.MoneyInput.highPrecision": "High Precision Price",
   "UIKit.MultilineTextInput.collapse": "Collapse",
   "UIKit.MultilineTextInput.expand": "Expand",
   "UIKit.PasswordField.hide": "hide",
   "UIKit.PasswordField.show": "show",
   "UIKit.SelectInput.noOptionsMessageWithInputValue": "No options",
   "UIKit.SelectInput.noOptionsMessageWithoutInputValue": "No options",
+  "UIKit.SelectInput.placeholder": "Select...",
   "UIKit.TimeInput.placeholder": "HH:mm AM/PM"
 }
