--- a/i18n/data/de.json
+++ b/i18n/data/de.json
@@ -6,6 +6,10 @@
   "UIKit.AsyncSelectInput.noOptionsMessageWithInputValue": "",
   "UIKit.AsyncSelectInput.noOptionsMessageWithoutInputValue": "",
   "UIKit.AsyncSelectInput.placeholder": "Auswählen...",
+  "UIKit.CalendarHeader.nextMonthTooltip": "nächstes Monat",
+  "UIKit.CalendarHeader.nextYearTooltip": "nächstes Jahr",
+  "UIKit.CalendarHeader.previousMonthTooltip": "letztes Monat",
+  "UIKit.CalendarHeader.previousYearTooltip": "letztes Jahr",
   "UIKit.CalendarHeader.todayTooltip": "Heute",
   "UIKit.CreatableSelectInput.createLabel": "",
   "UIKit.CreatableSelectInput.noOptionsMessageWithInputValue": "",
