--- a/i18n/data/fr-FR.json
+++ b/i18n/data/fr-FR.json
@@ -6,6 +6,11 @@
   "UIKit.AsyncSelectInput.noOptionsMessageWithInputValue": "Aucune option",
   "UIKit.AsyncSelectInput.noOptionsMessageWithoutInputValue": "Aucune option",
   "UIKit.AsyncSelectInput.placeholder": "Sélectionner...",
+  "UIKit.CalendarHeader.nextMonthTooltip": "",
+  "UIKit.CalendarHeader.nextYearTooltip": "",
+  "UIKit.CalendarHeader.previousMonthTooltip": "",
+  "UIKit.CalendarHeader.previousYearTooltip": "",
+  "UIKit.CalendarHeader.todayTooltip": "",
   "UIKit.CreatableSelectInput.createLabel": "Créer \"{inputValue}\"",
   "UIKit.CreatableSelectInput.noOptionsMessageWithInputValue": "Aucune option",
   "UIKit.CreatableSelectInput.noOptionsMessageWithoutInputValue": "Aucune option",
