--- a/i18n/data/en.json
+++ b/i18n/data/en.json
@@ -6,6 +6,11 @@
   "UIKit.AsyncSelectInput.noOptionsMessageWithInputValue": "No options",
   "UIKit.AsyncSelectInput.noOptionsMessageWithoutInputValue": "No options",
   "UIKit.AsyncSelectInput.placeholder": "Select...",
+  "UIKit.CalendarHeader.nextMonthTooltip": "Next month",
+  "UIKit.CalendarHeader.nextYearTooltip": "Next year",
+  "UIKit.CalendarHeader.previousMonthTooltip": "Previous month",
+  "UIKit.CalendarHeader.previousYearTooltip": "Previous year",
+  "UIKit.CalendarHeader.todayTooltip": "Today",
   "UIKit.CreatableSelectInput.createLabel": "Create \"{inputValue}\"",
   "UIKit.CreatableSelectInput.noOptionsMessageWithInputValue": "No options",
   "UIKit.CreatableSelectInput.noOptionsMessageWithoutInputValue": "No options",
