--- a/i18n/data/es.json
+++ b/i18n/data/es.json
@@ -6,6 +6,11 @@
   "UIKit.AsyncSelectInput.noOptionsMessageWithInputValue": "Menú vacío",
   "UIKit.AsyncSelectInput.noOptionsMessageWithoutInputValue": "Menú vacío",
   "UIKit.AsyncSelectInput.placeholder": "Seleccionar...",
+  "UIKit.CalendarHeader.nextMonthTooltip": "",
+  "UIKit.CalendarHeader.nextYearTooltip": "",
+  "UIKit.CalendarHeader.previousMonthTooltip": "",
+  "UIKit.CalendarHeader.previousYearTooltip": "",
+  "UIKit.CalendarHeader.todayTooltip": "",
   "UIKit.CreatableSelectInput.createLabel": "Crear \"{inputValue}\"",
   "UIKit.CreatableSelectInput.noOptionsMessageWithInputValue": "Menú vacío",
   "UIKit.CreatableSelectInput.noOptionsMessageWithoutInputValue": "Menú vacío",
