chore: add i18n translations for calendar header

--- a/i18n/data/zh-CN.json
+++ b/i18n/data/zh-CN.json
@@ -6,11 +6,11 @@
   "UIKit.AsyncSelectInput.noOptionsMessageWithInputValue": "无选项",
   "UIKit.AsyncSelectInput.noOptionsMessageWithoutInputValue": "无选项",
   "UIKit.AsyncSelectInput.placeholder": "选择...",
-  "UIKit.CalendarHeader.nextMonthTooltip": "",
-  "UIKit.CalendarHeader.nextYearTooltip": "",
-  "UIKit.CalendarHeader.previousMonthTooltip": "",
-  "UIKit.CalendarHeader.previousYearTooltip": "",
-  "UIKit.CalendarHeader.todayTooltip": "",
+  "UIKit.CalendarHeader.nextMonthTooltip": "下个月",
+  "UIKit.CalendarHeader.nextYearTooltip": "下一年",
+  "UIKit.CalendarHeader.previousMonthTooltip": "上个月",
+  "UIKit.CalendarHeader.previousYearTooltip": "上一年",
+  "UIKit.CalendarHeader.todayTooltip": "今天",
   "UIKit.CreatableSelectInput.createLabel": "创建 \"{inputValue}\"",
   "UIKit.CreatableSelectInput.noOptionsMessageWithInputValue": "无选项",
   "UIKit.CreatableSelectInput.noOptionsMessageWithoutInputValue": "无选项",
