--- a/i18n/data/es.json
+++ b/i18n/data/es.json
@@ -6,11 +6,11 @@
   "UIKit.AsyncSelectInput.noOptionsMessageWithInputValue": "Menú vacío",
   "UIKit.AsyncSelectInput.noOptionsMessageWithoutInputValue": "Menú vacío",
   "UIKit.AsyncSelectInput.placeholder": "Seleccionar...",
-  "UIKit.CalendarHeader.nextMonthTooltip": "",
-  "UIKit.CalendarHeader.nextYearTooltip": "",
-  "UIKit.CalendarHeader.previousMonthTooltip": "",
-  "UIKit.CalendarHeader.previousYearTooltip": "",
-  "UIKit.CalendarHeader.todayTooltip": "",
+  "UIKit.CalendarHeader.nextMonthTooltip": "Próximo mes",
+  "UIKit.CalendarHeader.nextYearTooltip": "Próximo año",
+  "UIKit.CalendarHeader.previousMonthTooltip": "Mes anterior",
+  "UIKit.CalendarHeader.previousYearTooltip": "Año anterior",
+  "UIKit.CalendarHeader.todayTooltip": "Hoy",
   "UIKit.CreatableSelectInput.createLabel": "Crear \"{inputValue}\"",
   "UIKit.CreatableSelectInput.noOptionsMessageWithInputValue": "Menú vacío",
   "UIKit.CreatableSelectInput.noOptionsMessageWithoutInputValue": "Menú vacío",
