--- a/i18n/data/es.json
+++ b/i18n/data/es.json
@@ -33,8 +33,8 @@
   "UIKit.LocalizedTextInput.collapse": "Ocultar lenguajes ({remainingLanguages})",
   "UIKit.LocalizedTextInput.expand": "Mostrar todos los lenguajes ({remainingLanguages})",
   "UIKit.LocalizedTextInput.missingRequiredField": "Este campo es obligatorio. Proporcione un valor al menos.",
-  "UIKit.MoneyField.highPrecision": "",
-  "UIKit.MoneyInput.highPrecision": "",
+  "UIKit.MoneyField.highPrecision": "Precio de alta precisión",
+  "UIKit.MoneyInput.highPrecision": "Precio de alta precisión",
   "UIKit.MultilineTextInput.collapse": "Contraer",
   "UIKit.MultilineTextInput.expand": "Expandir",
   "UIKit.PasswordField.hide": "ocultar",
