chore: update translations (#931)
* chore: add i18n translations for calendar header

* chore: add missing translation

--- a/i18n/data/es.json
+++ b/i18n/data/es.json
@@ -6,11 +6,11 @@
   "UIKit.AsyncSelectInput.noOptionsMessageWithInputValue": "Menú vacío",
   "UIKit.AsyncSelectInput.noOptionsMessageWithoutInputValue": "Menú vacío",
   "UIKit.AsyncSelectInput.placeholder": "Seleccionar...",
-  "UIKit.CalendarHeader.nextMonthTooltip": "",
-  "UIKit.CalendarHeader.nextYearTooltip": "",
-  "UIKit.CalendarHeader.previousMonthTooltip": "",
-  "UIKit.CalendarHeader.previousYearTooltip": "",
-  "UIKit.CalendarHeader.todayTooltip": "",
+  "UIKit.CalendarHeader.nextMonthTooltip": "Próximo mes",
+  "UIKit.CalendarHeader.nextYearTooltip": "Próximo año",
+  "UIKit.CalendarHeader.previousMonthTooltip": "Mes anterior",
+  "UIKit.CalendarHeader.previousYearTooltip": "Año anterior",
+  "UIKit.CalendarHeader.todayTooltip": "Hoy",
   "UIKit.CreatableSelectInput.createLabel": "Crear \"{inputValue}\"",
   "UIKit.CreatableSelectInput.noOptionsMessageWithInputValue": "Menú vacío",
   "UIKit.CreatableSelectInput.noOptionsMessageWithoutInputValue": "Menú vacío",
@@ -33,8 +33,8 @@
   "UIKit.LocalizedTextInput.collapse": "Ocultar lenguajes ({remainingLanguages})",
   "UIKit.LocalizedTextInput.expand": "Mostrar todos los lenguajes ({remainingLanguages})",
   "UIKit.LocalizedTextInput.missingRequiredField": "Este campo es obligatorio. Proporcione un valor al menos.",
-  "UIKit.MoneyField.highPrecision": "",
-  "UIKit.MoneyInput.highPrecision": "",
+  "UIKit.MoneyField.highPrecision": "Precio de alta precisión",
+  "UIKit.MoneyInput.highPrecision": "Precio de alta precisión",
   "UIKit.MultilineTextInput.collapse": "Contraer",
   "UIKit.MultilineTextInput.expand": "Expandir",
   "UIKit.PasswordField.hide": "ocultar",
