--- a/i18n/data/de.json
+++ b/i18n/data/de.json
@@ -1,27 +1,27 @@
 {
-  "UIKit.AsyncCreatableSelectInput.createLabel": "",
-  "UIKit.AsyncCreatableSelectInput.noOptionsMessageWithInputValue": "",
-  "UIKit.AsyncCreatableSelectInput.noOptionsMessageWithoutInputValue": "",
+  "UIKit.AsyncCreatableSelectInput.createLabel": "\"{inputValue}\" erstellen",
+  "UIKit.AsyncCreatableSelectInput.noOptionsMessageWithInputValue": "Keine Optionen",
+  "UIKit.AsyncCreatableSelectInput.noOptionsMessageWithoutInputValue": "Keine Optionen",
   "UIKit.AsyncCreatableSelectInput.placeholder": "Auswählen...",
-  "UIKit.AsyncSelectInput.noOptionsMessageWithInputValue": "",
-  "UIKit.AsyncSelectInput.noOptionsMessageWithoutInputValue": "",
+  "UIKit.AsyncSelectInput.noOptionsMessageWithInputValue": "Keine Optionen",
+  "UIKit.AsyncSelectInput.noOptionsMessageWithoutInputValue": "Keine Optionen",
   "UIKit.AsyncSelectInput.placeholder": "Auswählen...",
   "UIKit.CalendarHeader.nextMonthTooltip": "nächstes Monat",
   "UIKit.CalendarHeader.nextYearTooltip": "nächstes Jahr",
   "UIKit.CalendarHeader.previousMonthTooltip": "letztes Monat",
   "UIKit.CalendarHeader.previousYearTooltip": "letztes Jahr",
   "UIKit.CalendarHeader.todayTooltip": "Heute",
-  "UIKit.CreatableSelectInput.createLabel": "",
-  "UIKit.CreatableSelectInput.noOptionsMessageWithInputValue": "",
-  "UIKit.CreatableSelectInput.noOptionsMessageWithoutInputValue": "",
+  "UIKit.CreatableSelectInput.createLabel": \"{inputValue}\" erstellen",
+  "UIKit.CreatableSelectInput.noOptionsMessageWithInputValue": "Keine Optionen",
+  "UIKit.CreatableSelectInput.noOptionsMessageWithoutInputValue": "Keine Optionen",
   "UIKit.CreatableSelectInput.placeholder": "Auswählen...",
   "UIKit.DateInput.placeholder": "DD.MM.YYYY",
   "UIKit.DateRangeInput.placeholder": "DD.MM.YYYY - DD.MM.YYYY",
   "UIKit.DateTimeInput.placeholder": "DD.MM.YYYY - HH:mm",
   "UIKit.DateTimeInput.timePlaceholder": "HH:mm",
-  "UIKit.FieldErrors.invalidFractionalNumber": "",
-  "UIKit.FieldErrors.invalidNegativeNumber": "",
-  "UIKit.FieldErrors.missingRequiredField": "",
+  "UIKit.FieldErrors.invalidFractionalNumber": "Eine ganze Zahl ist erforderlich.",
+  "UIKit.FieldErrors.invalidNegativeNumber": "Negative Zahlen werden nicht unterstützt.",
+  "UIKit.FieldErrors.missingRequiredField": "Pflichtfeld*, Geben Sie mindestens einen Wert an",
   "UIKit.LocalizedMoneyInput.hide": "Währungen verbergen ({remainingCurrencies})",
   "UIKit.LocalizedMoneyInput.missingRequiredField": "Pflichtfeld*, Geben Sie mindestens einen Wert an",
   "UIKit.LocalizedMoneyInput.show": "Alle Währungen anzeigen ({remainingCurrencies})",
@@ -33,14 +33,14 @@
   "UIKit.LocalizedTextInput.collapse": "Sprachen verbergen",
   "UIKit.LocalizedTextInput.expand": "Alle Sprachen anzeigen",
   "UIKit.LocalizedTextInput.missingRequiredField": "Pflichtfeld*, Geben Sie mindestens einen Wert an",
-  "UIKit.MoneyField.highPrecision": "",
-  "UIKit.MoneyInput.highPrecision": "",
+  "UIKit.MoneyField.highPrecision": "Hochpräzisionspreis",
+  "UIKit.MoneyInput.highPrecision": "Hochpräzisionspreis",
   "UIKit.MultilineTextInput.collapse": "Ausblenden",
   "UIKit.MultilineTextInput.expand": "Erweitern",
   "UIKit.PasswordField.hide": "verbergen",
   "UIKit.PasswordField.show": "anzeigen",
-  "UIKit.SelectInput.noOptionsMessageWithInputValue": "",
-  "UIKit.SelectInput.noOptionsMessageWithoutInputValue": "",
+  "UIKit.SelectInput.noOptionsMessageWithInputValue": "Keine Optionen",
+  "UIKit.SelectInput.noOptionsMessageWithoutInputValue": "Keine Optionen",
   "UIKit.SelectInput.placeholder": "Auswählen...",
   "UIKit.TimeInput.placeholder": "HH:mm"
 }
